Intención de implementar el mostrado de preguntas de seleccion multiple. Ausencia de tablas y trabajo actualmente desarrollado por otros developers como obstaculo. Pendiente pruebas y definition of done. Siguiente: plantear modelos de visualizacion y recuperacion de datos versátiles.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model Opiniometro_WebApp.Models.FormularioCursoModel
+﻿@model Opiniometro_WebApp.Models.FormularioCursoModel
 
 @{
     ViewBag.Title = "Index";
@@ -24,11 +23,12 @@
         @foreach (var item in Model.preguntasFormulario)
         {
             <tr id="campoTexto">
-                <td >
+                <td>
                     @Html.DisplayFor(modelItem => item.item)
                     <script>
-                        escogerTipoRespuesta(1,true)
+                        escogerTipoRespuesta(1, true)
                     </script>
+                    @{ Html.RenderPartial("SeleccionMultiple"); }
                     <br />
                 </td>
             </tr>
