--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -17,6 +17,8 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+            @Html.HiddenFor(model => model.viejaCedula);
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Persona.Cedula, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-3">
