--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -194,10 +194,29 @@
                                                     {
                                                         <div style="height:180px; overflow-y: scroll;">
 
-                                                            @foreach (var item in Model.Formulario_Respuesta)
+                                                            <p id="rep_@item_actual" style="float:right"></p>
+
+                                                            @foreach (var item in Model.Formulario_Respuesta.Take(1))
                                                             {
-                                                                <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p>
-                                                                <hr>
+                                                            <script>
+                                                                $.ajax({
+                                                                    type: "POST",
+                                                                    url: "/VisualizarFormulario/ObtenerRespTexto",
+                                                                    data: "{ 'codigoFormulario': '@item.CodigoFormulario', 'cedulaProfesor': '@item.Profesor.CedulaProfesor', 'annoGrupo': '@item.Grupo.AnnoGrupo', 'semestreGrupo': '@item.Grupo.SemestreGrupo', 'numeroGrupo': '@item.Grupo.Numero', 'siglaCurso': '@item.Grupo.SiglaCurso', 'itemId': '@seccion.Item.ItemId' }" ,
+                                                                    contentType: "application/json; charset=utf-8",
+                                                                    dataType: "json",
+                                                                    success: function (chData) {
+                                                                    var aData = chData;
+                                                                    var obs = aData[0];
+
+                                                                        for (var data in obs) {
+                                                                            document.getElementById("rep_@item_actual").innerHTML = document.getElementById("rep_@item_actual").innerText + (obs[data]).toString() + " - ";
+                                                                        }
+                                                                            }
+                                                                        });
+                                                            </script>
+
+
                                                             }
 
                                                         </div>
@@ -239,7 +258,6 @@
                                                                                         var ap2 = aData[3];
 
                                                                                             for (var data in obs) {
-                                                                                                //if (@perfil_actual.Equals("Admin")) { //Cuando se incluye el if lo que esta dentro no se despliega incluso si la condicion es verdadera
                                                                                                 document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + (obs[data]).toString() + " - " + (nom[data]).toString() + " " + (ap1[data]).toString() + " " + (ap2[data]).toString() + "<br>";
                                                                                                 //} else {
 
