Creación de script y partial view para la implementación de las preguntas de tipo escalar.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -27,7 +27,8 @@
                 <td >
                     @Html.DisplayFor(modelItem => item.item)
                     <script>
-                        escogerTipoRespuesta(1,true)
+                        escogerTipoRespuesta(5, true)
+                        @Html.Partial("Escalar", item)
                     </script>
                     <br />
                 </td>
