Corregido un error en borrar perfiles y se cambiaron unos botones para seguir el estándar.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -24,7 +24,7 @@
                         </div>
                         <br />
                         <div class="form-group">
-                            <input type="submit" value="Ingresar" name="Ingresar" />
+                            <input type="submit" value="Ingresar" name="Ingresar" class = "btn btn-default" />
                         </div>
 
                         <div class="form-group">
