--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/VistaFormularioVParcial.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/VistaFormularioVParcial.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<Opiniometro_WebApp.Models.Conformado_Item_Sec_Form>
+@model Opiniometro_WebApp.Models.FormularioCompletoModel
 
 <table class="table">
     <tr>
@@ -13,7 +13,7 @@
         </th>
     </tr>
 
-    @foreach (var item in Model.OrderBy(item => item.Orden_Seccion))
+    @foreach (var item in Model.ConformadoS.OrderBy(item => item.Orden_Seccion))//Deberia imprimir solo una vez las secciones del formulario. 
     {
         <tr>
 
@@ -30,13 +30,13 @@
         <tr>
             <th>
 
-            </th>
+            @*</th>*@
             <th>
 
             </th>
 
         </tr>
-        foreach (var pregunta in Model.OrderBy(pregunta => pregunta.Orden_Item))
+        foreach (var pregunta in Model.Conformados.OrderBy(pregunta => pregunta.Orden_Item).Where(pregunta => pregunta.Seccion == item.Seccion))
         {
             <tr>
                 <td>
